Update: The -R/--raw is now -O/--original in these programs.

--- a/documentation/fss_extended_read.html
+++ b/documentation/fss_extended_read.html
@@ -244,8 +244,8 @@
                       <td class="column">Print using the special pipe format.</td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><code class="code">-R</code></td>
-                      <td class="column"><code class="code">--raw</code></td>
+                      <td class="column"><code class="code">-O</code></td>
+                      <td class="column"><code class="code">--original</code></td>
                       <td class="column">Print with the original quotes and escapes.</td>
                     </tr>
                     <tr class="row">
