Bugfix: The FLL page needs to reference the stable release and fix the change log.
The 0.6.0 is a stable release.
Fix the text of the fll page to reference this.

The "Add support for ..." change log entry should not be under Security Fixes and instead should be under Features.

The current date is still the 31st in my time zone, so I am going to replace the existing release tar ball with these changes.

--- a/fll.html
+++ b/fll.html
@@ -110,7 +110,7 @@
 
             <div class="article-content">
               <p class="p">
-                The current stable release series of <abbr title="Featureless Linux Library">FLL</abbr> is <strong>0.6</strong>. At this time, the official stable release for the <strong>0.6</strong> series is not yet released but a release candidate is already out. The release candidate is version <strong>0.6.0</strong>.
+                The current stable release series of <abbr title="Featureless Linux Library">FLL</abbr> is <strong>0.6</strong>. The latest version of the stable release series is <strong>0.6.0</strong>.
               </p>
               <p class="p">
                 There are two different ways in which the project is released. The <em>bare release</em> and the <em>pre-packaged release</em>.
